Fixed h2 color contrast error

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,8 @@ h1 {
     padding: 15px;
 }
 h2 {
-    font: 30px #0D0D0D
+    font: 30px;
+    color: #0D0D0D;
 }
 p {
     font-size: 24px;
